server side : fix error with numbers

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Toolbox choice",
+  "name": "Cristian Ríos Tollbox Fullstack Choice",
   "icons": [
     {
       "src": "favicon.ico",
