--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/backendCoderHouse/toolbox#readme",
   "dependencies": {
+    "bignumber.js": "^9.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1"
