--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
+    "serve":"node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
