--- a/server/package.json
+++ b/server/package.json
@@ -28,5 +28,13 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "mocha": "^10.2.0"
+  },
+  
+  { 
+  "engines" : { 
+    "node" : "^14.x" 
   }
+
+
+  
 }
