--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,13 @@
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
+   { 
+
+  "engines" : { 
+
+    "node" : "^16.x" 
+
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
